--- a/http/assets/index.html
+++ b/http/assets/index.html
@@ -54,7 +54,11 @@
             <li><b>Source</b>: {{.Source }}</li>
             <li><b>Timestamp</b>: {{ formatts .HealthcheckTimestamp }}</li>
             <li><b>Duration</b>: {{ .Duration }} milliseconds</li>
-            {{ if ne .HTTPStatusCode 0 }}<li><b>HTTP Status Code</b>: {{ .HTTPStatusCode }}</li>{{ end }}
+            {{ if .Annotations }}
+            {{ range $key, $value := .Annotations }}
+            <li><b>{{ $key }}</b>: {{ $value }}</li>
+            {{ end }}
+            {{ end }}
           </ul>
             {{ if .Labels }}<br/>
             {{ range $key, $value := .Labels }}
